Improves integration with osx clipboard

--- a/init.conf
+++ b/init.conf
@@ -14,6 +14,7 @@ setw -g pane-base-index 1
 # use PREFIX | to split window horizontally and PREFIX - to split vertically
 bind | split-window -h -c "#{pane_current_path}"
 bind - split-window -v -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
 
 # map Vi movement keys as pane movement keys
 # bind h select-pane -L
@@ -40,6 +41,20 @@ bind L resize-pane -R 5
 
  # use vim keybindings in copy mode
 setw -g mode-keys vi
+
+# Copy-paste integration
+set-option -g default-command "reattach-to-user-namespace -l bash"
+
+# Setup 'v' to begin selection as in Vim
+bind-key -t vi-copy v begin-selection
+bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+
+# Update default binding of `Enter` to also use copy-pipe
+unbind -t vi-copy Enter
+bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+
+# Bind ']' to use pbpaste
+bind ] run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
 
 ######################
 ### DESIGN CHANGES ###
