--- a/init.conf
+++ b/init.conf
@@ -2,7 +2,10 @@
 # and unbind C-b to free it up
 set -g prefix C-a
 unbind C-b
-#set-window-option -g mode-mouse on
+
+# Allows to resize panels with mouse
+set-option -g mouse on
+
 set -sg escape-time 0
 
 setw -g mode-keys vi
@@ -16,13 +19,6 @@ bind | split-window -h -c "#{pane_current_path}"
 bind - split-window -v -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
 
-# map Vi movement keys as pane movement keys
-# bind h select-pane -L
-# bind j select-pane -D
-# bind k select-pane -U
-# bind l select-pane -R
-#
-
 # Smart pane switching with awareness of vim splits
 # See: https://github.com/christoomey/vim-tmux-navigator
 is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?x?)(diff)?$"'
@@ -34,16 +30,16 @@ bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
 
 # resize panes using PREFIX H, J, K, L
-bind H resize-pane -L 5
-bind J resize-pane -D 5
-bind K resize-pane -U 5
-bind L resize-pane -R 5
+bind H resize-pane -L 10
+bind J resize-pane -D 10
+bind K resize-pane -U 10
+bind L resize-pane -R 10
 
  # use vim keybindings in copy mode
 setw -g mode-keys vi
 
 # Copy-paste integration
-set-option -g default-command "reattach-to-user-namespace -l bash"
+set-option -g default-command "reattach-to-user-namespace -l zsh"
 
 # Setup 'v' to begin selection as in Vim
 bind-key -t vi-copy v begin-selection
